# axolotl

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  LICENSE  README.md
core/: CMakeLists.txt
core/inc/axolotl/: assets.hh  axolotl.h  axolotl.hh  camera.h  camera.hh  component.h  component.hh  editor.h  ento.h  ento.hh  framebuffer.h  framebuffer.hh  geometry.hh  grid.hh  gui.h  gui.hh  iomanager.h  iomanager.hh  light.hh  line.hh  material.h  material.hh  mesh.h  mesh.hh  model.h  model.hh  physics.hh  renderer.h  renderer.hh  scene.h  scene.hh  serialization.h  shader.h  shader.hh  terminal.h  terminal.hh  texture.h  texture.hh  transform.h  transform.hh  (+4 more)
core/src/: assets.cc  axolotl.cc  camera.cc  component.cc  editor.cc  ento.cc  framebuffer.cc  geometry.cc  grid.cc  gui.cc  iomanager.cc  light.cc  line.cc  material.cc  mesh.cc  model.cc  physics.cc  renderer.cc  scene.cc  serialization.cc  shader.cc  terminal.cc  texture.cc  transform.cc  window.cc
editor/res/: CMakeLists.txt
editor/res/misc/: Capsule.fbx  Cone.fbx  Cube.fbx  Cylinder.fbx  Plane.fbx  Sphere.fbx  Torus.fbx  boat_license.txt  maze.txt  project.json  stronghold_license.txt
editor/res/shaders/: gltf.frag  gltf.vert  line.frag  line.vert  post.frag  post.vert  skybox.frag  skybox.vert  testy.frag  testy.vert  utils.glsl
editor/res/textures/skybox/: TropicalSunnyDay_SOURCE.txt
editor/src/: CMakeLists.txt  behaviour.cc  behaviour.hh  cs8502.cc  cs8502.hh  dockspace.cc  dockspace.h  dockspace.hh  editor.cc  editor_camera.cc  editor_camera.hh  frame_editor.cc  frame_editor.h  inspector.cc  inspector.h  inspector.hh  level1.cc  level1.hh  level2.cc  level2.hh  menu.cc  menu.hh  test_scene.cc  test_scene.h  test_scene.hh  ui.cc  ui.h  ui.hh
third/: CMakeLists.txt
third/IconFontCppHeaders/: CMakeLists.txt  IconsFontAwesome5Pro.h
third/glad/: CMakeLists.txt
third/glad/include/: glad.h
third/glad/src/: glad.c
